--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -3,6 +3,7 @@
 @import 'badge';
 @import 'loader';
 @import 'activities';
+@import 'attendances';
 @import 'reports';
 @import 'tour';
 @import 'ember-power-calendar';
