--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -4,6 +4,7 @@
 @import 'loader';
 @import 'activities';
 @import 'attendances';
+@import 'analysis-reschedule';
 @import 'reports';
 @import 'tour';
 @import 'ember-power-calendar';
