--- a/app/analysis/template.hbs
+++ b/app/analysis/template.hbs
@@ -23,6 +23,7 @@
   pages     = model.meta.pagination.pages
   page      = page
   page_size = page_size
+  class     = 'table--analysis-reschedule'
 }}
   <thead>
     <tr>
@@ -33,6 +34,9 @@
       {{#sort-header update=(action (mut ordering)) current=ordering by='task__project__name'}}Project{{/sort-header}}
       {{#sort-header update=(action (mut ordering)) current=ordering by='task__name'}}Task{{/sort-header}}
       {{#sort-header update=(action (mut ordering)) current=ordering by='comment'}}Comment{{/sort-header}}
+      <th>Needs review</th>
+      <th>Not billable</th>
+      <th>Verified</th>
     </tr>
   </thead>
 {{^}}
@@ -46,6 +50,27 @@
         <td>{{report.task.project.name}}</td>
         <td>{{report.task.name}}</td>
         <td>{{report.comment}}</td>
+        <td>
+          {{#if report.review}}
+            {{fa-icon 'check-square-o'}}
+          {{else}}
+            {{fa-icon 'square-o'}}
+          {{/if}}
+        </td>
+        <td>
+          {{#if report.notBillable}}
+            {{fa-icon 'check-square-o'}}
+          {{else}}
+            {{fa-icon 'square-o'}}
+          {{/if}}
+        </td>
+        <td>
+          {{#if report.verifiedBy}}
+            {{fa-icon 'check-square-o' title=(concat 'Verified by ' report.verifiedBy.username)}}
+          {{else}}
+            {{fa-icon 'square-o'}}
+          {{/if}}
+        </td>
       </tr>
     {{^}}
       <tr>
