--- a/app/reschedule/template.hbs
+++ b/app/reschedule/template.hbs
@@ -23,20 +23,21 @@
   pages     = model.meta.pagination.pages
   page      = page
   page_size = page_size
+  class     = 'table--analysis-reschedule'
 }}
   <thead>
     <tr>
-      <th width="4%">User</th>
-      <th width="6%">Date</th>
-      <th width="4%">Duration</th>
-      <th width="10%">Customer</th>
-      <th width="10%">Project</th>
-      <th width="10%">Task</th>
-      <th width="30%">Comment</th>
-      <th width="8%"></th>
-      <th width="8%"></th>
-      <th width="6%"></th>
-      <th width="4%">
+      {{#sort-header update=(action (mut ordering)) current=ordering by='user__username'}}User{{/sort-header}}
+      {{#sort-header update=(action (mut ordering)) current=ordering by='date'}}Date{{/sort-header}}
+      {{#sort-header update=(action (mut ordering)) current=ordering by='duration'}}Duration{{/sort-header}}
+      {{#sort-header update=(action (mut ordering)) current=ordering by='task__project__customer__name'}}Customer{{/sort-header}}
+      {{#sort-header update=(action (mut ordering)) current=ordering by='task__project__name'}}Project{{/sort-header}}
+      {{#sort-header update=(action (mut ordering)) current=ordering by='task__name'}}Task{{/sort-header}}
+      {{#sort-header update=(action (mut ordering)) current=ordering by='comment'}}Comment{{/sort-header}}
+      <th>Needs review</th>
+      <th>Not billable</th>
+      <th>Verified</th>
+      <th>
         {{#if model.length}}
           <button data-test-verify-page class="btn btn-success" title="Verify page" {{action 'verifyPage'}}>{{fa-icon 'check'}}</button>
         {{/if}}
