--- a/app/analysis/template.hbs
+++ b/app/analysis/template.hbs
@@ -34,9 +34,9 @@
       {{#sort-header update=(action (mut ordering)) current=ordering by='task__project__name'}}Project{{/sort-header}}
       {{#sort-header update=(action (mut ordering)) current=ordering by='task__name'}}Task{{/sort-header}}
       {{#sort-header update=(action (mut ordering)) current=ordering by='comment'}}Comment{{/sort-header}}
+      {{#sort-header update=(action (mut ordering)) current=ordering by='verified_by__username'}}Reviewer{{/sort-header}}
       <th>Needs review</th>
       <th>Not billable</th>
-      <th>Verifier</th>
     </tr>
   </thead>
 {{^}}
@@ -50,9 +50,9 @@
         <td>{{report.task.project.name}}</td>
         <td>{{report.task.name}}</td>
         <td>{{report.comment}}</td>
+        <td>{{if report.verifiedBy report.verifiedBy.username}}</td>
         <td>{{sy-checkmark checked=report.review}}</td>
         <td>{{sy-checkmark checked=report.notBillable}}</td>
-        <td>{{if report.verifiedBy report.verifiedBy.username}}</td>
       </tr>
     {{^}}
       <tr>
