--- a/app/analysis/template.hbs
+++ b/app/analysis/template.hbs
@@ -34,7 +34,7 @@
       {{#sort-header update=(action (mut ordering)) current=ordering by='task__project__name'}}Project{{/sort-header}}
       {{#sort-header update=(action (mut ordering)) current=ordering by='task__name'}}Task{{/sort-header}}
       {{#sort-header update=(action (mut ordering)) current=ordering by='comment'}}Comment{{/sort-header}}
-      {{#sort-header update=(action (mut ordering)) current=ordering by='verified_by__username'}}Reviewer{{/sort-header}}
+      {{#sort-header update=(action (mut ordering)) current=ordering by='verified_by__username'}}Verified by{{/sort-header}}
       <th>Needs review</th>
       <th>Not billable</th>
     </tr>
