Allow clearing of the user selection

--- a/app/components/user-selection/template.hbs
+++ b/app/components/user-selection/template.hbs
@@ -7,6 +7,7 @@
     searchField        = 'longName'
     tagName            = 'div'
     class              = 'user-select'
+    allowClear         = true
     onchange           = (action on-change)
     extra              = (hash
       selectedTemplate = selectedTemplate
