WIP: Lazy loading the spent time

--- a/app/components/task-selection/template.hbs
+++ b/app/components/task-selection/template.hbs
@@ -10,6 +10,7 @@
     class              = 'customer-select'
     onchange           = (action (mut customer))
     extra              = (hash
+      lazy             = true
       selectedTemplate = selectedTemplate
       optionTemplate   = customerOptionTemplate
     )
