--- a/app/components/user-selection/template.hbs
+++ b/app/components/user-selection/template.hbs
@@ -10,6 +10,7 @@
     allowClear         = true
     onchange           = (action on-change)
     extra              = (hash
+      lazy             = true
       selectedTemplate = selectedTemplate
       optionTemplate   = optionTemplate
     )
