--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -6,6 +6,7 @@
 @import 'attendances';
 @import 'analysis-reschedule';
 @import 'reports';
+@import 'progress-tooltip';
 @import 'tour';
 @import 'ember-power-calendar';
 @import 'ember-basic-dropdown';
