--- a/app/styles/badge.scss
+++ b/app/styles/badge.scss
@@ -13,6 +13,23 @@
   border-radius: 10px;
 }
 
-a.active .badge {
+a.active .badge,
+.badge--primary {
   background-color: var(--color-primary);
+}
+
+.badge--success {
+  background-color: var(--color-success);
+}
+
+.badge--info {
+  background-color: var(--color-info);
+}
+
+.badge--warning {
+  background-color: var(--color-warning);
+}
+
+.badge--danger {
+  background-color: var(--color-danger);
 }
