--- a/app/templates/project-option.hbs
+++ b/app/templates/project-option.hbs
@@ -1,9 +1,10 @@
 <div
   title="{{option.name}}{{if option.archived ' (archived)'}}"
   class="{{if option.archived 'inactive'}}"
+  id="project-option-{{option.id}}"
 >
   {{#if (and current (or media.isMd media.isLg media.isXl))}}
-    {{progress-tooltip visible=current project=option}}
+    {{progress-tooltip target=(concat '#project-option-' option.id) visible=current project=option}}
   {{/if}}
   {{option.name}}
   {{#if option.archived}}
