--- a/app/styles/progress-tooltip.scss
+++ b/app/styles/progress-tooltip.scss
@@ -10,7 +10,7 @@
   max-width: initial;
   color: rgb(255,255,255);
   font-size: 0.9rem;
-  padding: 0.5rem;
+  padding: 0.3rem 0.5rem;
   border-radius: 0.3rem;
   animation: 500ms ease slide-in;
 
