Add time overview for tasks too

--- a/app/templates/project-option.hbs
+++ b/app/templates/project-option.hbs
@@ -4,7 +4,7 @@
   id="project-option-{{option.id}}"
 >
   {{#if (and current (or media.isMd media.isLg media.isXl))}}
-    {{progress-tooltip target=(concat '#project-option-' option.id) visible=current project=option}}
+    {{progress-tooltip target=(concat '#project-option-' option.id) visible=current model=option}}
   {{/if}}
   {{option.name}}
   {{#if option.archived}}
