--- a/app/components/progress-tooltip/template.hbs
+++ b/app/components/progress-tooltip/template.hbs
@@ -3,7 +3,7 @@
     <div class="time-info">
       <div class="time-info-durations">
         <p>Spent: {{humanize-duration spent}}</p>
-        <p>Estimate: {{if progress (humanize-duration estimated) 'None'}}</p>
+        <p>Estimate: {{if estimated (humanize-duration estimated) 'None'}}</p>
       </div>
       {{#if progress}}
         <div class="time-info-percentage">
