--- a/app/styles/progress-tooltip.scss
+++ b/app/styles/progress-tooltip.scss
@@ -12,7 +12,7 @@
   font-size: 0.9rem;
   padding: 0.3rem 0.5rem;
   border-radius: 0.3rem;
-  animation: 500ms ease slide-in;
+  animation: 200ms ease slide-in;
 
   .time-info {
     display: flex;
@@ -35,7 +35,7 @@
     }
   }
 
-  &::before {
+  &::after {
     content: '';
     display: block;
     width: 0;
@@ -53,7 +53,7 @@
 @keyframes slide-in {
   from {
     opacity: 0;
-    left: -20px;
+    left: -15px;
   }
   to {
     opacity: 1;
