--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -203,8 +203,8 @@ body {
   }
 }
 
-.force-white input {
-  background-color: white !important;
+.total {
+  border-bottom: 3px double var(--body-color);
 }
 
 .table--absence-types > thead > tr > th,
