--- a/app/components/paginated-table/template.hbs
+++ b/app/components/paginated-table/template.hbs
@@ -1,23 +1,6 @@
-{{yield}}
-{{#if (gt pages 1)}}
-  <tfoot>
-    <tr>
-      <td colspan="42">
-        {{pagination-pager current=page count=pages}}
-        <div class="limit pull-right">
-          Per page:
-          {{#each limits as |l i|}}
-            <span>
-              {{#if (eq page_size l)}}
-                {{l}}
-              {{else}}
-                <a href="#" {{action 'setLimit' l}}>{{l}}</a>
-              {{/if}}
-            </span>
-          {{/each}}
-        </div>
-      </td>
-    </tr>
-  </tfoot>
-{{/if}}
+{{yield (hash
+  head = (component 'paginated-table/head')
+  body = (component 'paginated-table/body')
+  foot = (component 'paginated-table/foot')
+)}}
 {{yield to='inverse'}}
