Fix activity editing and remove some unwanted sideeffects
* Add explicit types for all buttons
* Proper validations and changesets for activity blocks
* Some minor fixes for the time-/durationpicker

--- a/app/components/date-navigation/template.hbs
+++ b/app/components/date-navigation/template.hbs
@@ -1,11 +1,11 @@
 <div class="btn-group">
-  <button data-test-previous title="Previous day" class="btn btn-default" {{action 'setPrevious'}}>
+  <button type="button" data-test-previous title="Previous day" class="btn btn-default" {{action 'setPrevious'}}>
     {{fa-icon 'arrow-left'}}
   </button>
-  <button data-test-today title="Today" class="btn btn-default" {{action 'setToday'}}>
+  <button type="button" data-test-today title="Today" class="btn btn-default" {{action 'setToday'}}>
     Today
   </button>
-  <button data-test-next title="Next day" class="btn btn-default" {{action 'setNext'}}>
+  <button type="button" data-test-next title="Next day" class="btn btn-default" {{action 'setNext'}}>
     {{fa-icon 'arrow-right'}}
   </button>
 </div>
