--- a/app/components/report-reschedule-row/template.hbs
+++ b/app/components/report-reschedule-row/template.hbs
@@ -26,6 +26,7 @@ as |t|}}
 </td>
 <td>
   <button
+    type="submit"
     class="btn btn-primary"
     disabled={{or (not changeset.isDirty) (not changeset.isValid)}}
     {{action 'save'}}
