--- a/app/components/welcome-modal/template.hbs
+++ b/app/components/welcome-modal/template.hbs
@@ -7,8 +7,8 @@
     </div>
   {{/modal.body}}
   {{#modal.footer}}
-    <button class="btn btn-never" {{action on-never}}>Never</button>
-    <button class="btn btn-default" {{action on-later}}>Later</button>
-    <button class="btn btn-primary" {{action on-start}}>Sure</button>
+    <button type="button" class="btn btn-never" {{action on-never}}>Never</button>
+    <button type="button" class="btn btn-default" {{action on-later}}>Later</button>
+    <button type="submit" class="btn btn-primary" {{action on-start}}>Sure</button>
   {{/modal.footer}}
 {{/sy-modal}}
