--- a/app/reschedule/template.hbs
+++ b/app/reschedule/template.hbs
@@ -33,7 +33,7 @@
       <th>Verified</th>
       <th>
         {{#if model.length}}
-          <button data-test-verify-page class="btn btn-success" title="Verify page" {{action 'verifyPage'}}>{{fa-icon 'check'}}</button>
+          <button type="button" data-test-verify-page class="btn btn-success" title="Verify page" {{action 'verifyPage'}}>{{fa-icon 'check'}}</button>
         {{/if}}
       </th>
     </tr>
