--- a/app/analysis/template.hbs
+++ b/app/analysis/template.hbs
@@ -77,6 +77,7 @@
   <p>
     {{#each exportLinks as |link index|}}
       <button {{action 'download' link.url}}
+        type="button"
         disabled={{gt model.length 4000}}
         class="btn btn-default"
         data-test-download-file={{index}}>{{link.label}}</button>
