Better wording and event handling for the time- and durationpicker

--- a/app/components/sy-timepicker/template.hbs
+++ b/app/components/sy-timepicker/template.hbs
@@ -8,5 +8,5 @@
   value={{displayValue}}
   pattern={{pattern}}
   onkeydown={{action 'handleKeyDown'}}
-  oninput={{action 'handleInput'}}
+  onchange={{action 'handleChange'}}
 >
