--- a/app/me/template.hbs
+++ b/app/me/template.hbs
@@ -1,7 +1,7 @@
 {{#with model as |user|}}
   <h1>{{user.fullName}}</h1>
   <div>
-    <div class="grid grid--6of12">
+    <div class="grid grid--12of12 grid-md--6of12">
       <div class="grid-cell">
         <div class="card">
           <div class="card-header text-center">
