Fix activity block validation
* moment-validator prefers the changed value before the old value
* validate the block on timepicker blur in every case

--- a/app/components/sy-timepicker/template.hbs
+++ b/app/components/sy-timepicker/template.hbs
@@ -9,4 +9,5 @@
   pattern={{pattern}}
   onkeydown={{action 'handleKeyDown'}}
   onchange={{action 'handleChange'}}
+  onblur={{action (optional on-blur)}}
 >
