--- a/app/components/report-reschedule-row/template.hbs
+++ b/app/components/report-reschedule-row/template.hbs
@@ -1,6 +1,6 @@
-<td>{{changeset.user.username}}</td>
-<td>{{moment-format changeset.date 'DD.MM.YYYY'}}</td>
-<td>{{format-duration changeset.duration false}}</td>
+<div class="form-group">{{changeset.user.username}}</div>
+<div class="form-group">{{moment-format changeset.date 'DD.MM.YYYY'}}</div>
+<div class="form-group">{{format-duration changeset.duration false}}</div>
 {{#task-selection
   history     = false
   on-set-task = (action (mut changeset.task))
@@ -8,23 +8,23 @@
     task      = changeset.task
   )
 as |t|}}
-  <td class="form-group {{if changeset.error.task 'has-error'}}">{{t.customer}}</td>
-  <td class="form-group {{if changeset.error.task 'has-error'}}">{{t.project}}</td>
-  <td class="form-group {{if changeset.error.task 'has-error'}}">{{t.task}}</td>
+  <div class="form-group {{if changeset.error.task 'has-error'}}">{{t.customer}}</div>
+  <div class="form-group {{if changeset.error.task 'has-error'}}">{{t.project}}</div>
+  <div class="form-group {{if changeset.error.task 'has-error'}}">{{t.task}}</div>
 {{/task-selection}}
-<td class="form-group">
+<div class="form-group">
   {{input placeholder='Comment' class='form-control' value=changeset.comment}}
-</td>
-<td class="form-group">
+</div>
+<div class="form-group">
   {{sy-checkbox checked=changeset.review on-change=(action (mut changeset.review))}}
-</td>
-<td class="form-group">
+</div>
+<div class="form-group">
   {{sy-checkbox checked=changeset.notBillable on-change=(action (mut changeset.notBillable))}}
-</td>
-<td class="form-group">
+</div>
+<div class="form-group">
   {{sy-checkbox title=(if changeset.verifiedBy.id (concat 'Verified by ' changeset.verifiedBy.username)) checked=changeset.verifiedBy.id on-change=(action 'setVerified')}}
-</td>
-<td>
+</div>
+<div class="form-group">
   <button
     type="submit"
     class="btn btn-primary"
@@ -33,4 +33,4 @@ as |t|}}
   >
     {{fa-icon 'save'}}
   </button>
-</td>
+</div>
