--- a/app/index/reports/template.hbs
+++ b/app/index/reports/template.hbs
@@ -1,7 +1,7 @@
 <div class="btn-toolbar btn-toolbar--right form-group">
   <button type="button" class="btn btn-success" title="Move all entries to another date" {{action (mut showReschedule) true}}>Reschedule</button>
 </div>
-<table class="table table--striped table--reports">
+<table class="table table--striped table--reports table--form table--form-inline-lg">
   <tbody>
     {{#each reports as |report|}}
       {{#if report.verifiedBy}}
