--- a/app/styles/analysis-reschedule.scss
+++ b/app/styles/analysis-reschedule.scss
@@ -1,5 +1,5 @@
 .table--analysis-reschedule > thead > tr > th,
-.table--analysis-reschedule > tbody > tr > td {
+.table--analysis-reschedule > tbody > form > .form-group {
   &:nth-child(1),
   &:nth-child(2),
   &:nth-child(3) {
